                  '94',              '96', '98', '100',
                  '102',             '104'
                  );

      NEW:
            push (
                  @{$$self{states}},
                  '64', '66', '68', '70', '72',  '74',  '76',
                  '78', '80', '82', '84', '86',  '88',  '90',
                  '92', '94', '96', '98', '100', '102', '104'
                  );

 -Merged VMS filename handling patch sent by Michael Cartmell.  (Invalid
  output filenames were being created in some cases). 

 -Long C-style 'for' expressions will be broken after each ';'.   

  'perltidy -gnu' gives:

    OLD:
    for ($status = $db->seq($key, $value, R_CURSOR()) ; $status == 0
         and $key eq $origkey ; $status = $db->seq($key, $value, R_NEXT())) 

    NEW:
    for ($status = $db->seq($key, $value, R_CURSOR()) ;
         $status == 0 and $key eq $origkey ;
         $status = $db->seq($key, $value, R_NEXT()))

 -For the -lp option, a single long term within parens (without commas) now 
  has better alignment.  For example, perltidy -gnu

            OLD:
            $self->throw("Must specify a known host, not $location,"
                  . " possible values ("
                  . join (",", sort keys %hosts) . ")");

            NEW:
            $self->throw("Must specify a known host, not $location,"
                         . " possible values ("
                         . join (",", sort keys %hosts) . ")");


=head2 2001 12 31

 -This version is about 20 percent faster than the previous version as a result
 of optimization work.  The largest gain came from switching to a dispatch hash
 table in the tokenizer.

 -perltidy -html will check to see if HTML::Entities is installed, and if so,
 it will use it to encode unsafe characters.

 -Added flag -oext=ext to change the output file extension to be different
 from the default ('tdy' or 'html').  For example:

    perltidy -html -oext=htm filename

 will produce filename.htm
